--- a/configs/accelerate_config.yaml
+++ b/configs/accelerate_config.yaml
@@ -1,22 +1,28 @@
-# Accelerate Config for DeepSpeed ZeRO Stage 2
-# This configuration is optimized for multi-GPU training.
-
-compute_environment: "LOCAL_MACHINE"
-deepspeed_config:
-  deepspeed_multinode_launcher: "standard"
-  gradient_accumulation_steps: 1
-  offload_optimizer_device: "cpu"
-  offload_param_device: "cpu"
-  zero3_init_flag: false
-  zero_stage: 2
-distributed_type: "DEEPSPEED"
-downcast_bf16: "no"
+compute_environment: LOCAL_MACHINE
+debug: true
+distributed_type: FSDP
+downcast_bf16: 'no'
+dynamo_config:
+  dynamo_backend: INDUCTOR
+  dynamo_mode: default
+  dynamo_use_dynamic: true
+  dynamo_use_fullgraph: false
+  dynamo_use_regional_compilation: false
+enable_cpu_affinity: false
+fsdp_config:
+  fsdp_activation_checkpointing: true
+  fsdp_auto_wrap_policy: TRANSFORMER_BASED_WRAP
+  fsdp_cpu_ram_efficient_loading: true
+  fsdp_offload_params: false
+  fsdp_reshard_after_forward: true
+  fsdp_state_dict_type: SHARDED_STATE_DICT
+  fsdp_version: 2
 machine_rank: 0
-main_training_function: "main"
-mixed_precision: "bf16" # Use bf16 for better performance on modern GPUs
+main_training_function: main
+mixed_precision: 'no'
 num_machines: 1
-num_processes: 2 # Adjust based on the number of GPUs
-rdzv_backend: "static"
+num_processes: 2
+rdzv_backend: static
 same_network: true
 tpu_env: []
 tpu_use_cluster: false
