--- a/configs/stage_3_finetune.yaml
+++ b/configs/stage_3_finetune.yaml
@@ -12,9 +12,11 @@ dataset:
   path: "outputs/2025-06-15/15-21-10/stage_2_selection/selected_data.jsonl"
 
 training:
+  seed: 42
+  max_length: 1024
   num_train_epochs: 3
   learning_rate: 2e-4
-  per_device_train_batch_size: 2
+  per_device_train_batch_size: 1
   logging_dir: "${output_dir}/logs"
   logging_steps: 10
   save_strategy: "epoch"
