--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "torchvision>=0.21.0",
     "datasets",
     "dowhen>=0.1.0",
+    "ipykernel>=6.29.5",
 ]
 
 [tool.uv.sources]
