修改了训练的损失值，增加了垃圾桶专家分配的约束项

--- a/configs/stage_1_pretrain.yaml
+++ b/configs/stage_1_pretrain.yaml
@@ -29,6 +29,8 @@ training:
   epochs: 1
   optimizer: "AdamW"
   scheduler: "linear"
+  constraint_loss_weight: 0.1
+  trash_can_loss_beta: 5.0
   peft_mode: "lora"
   lora:
     r: 8
