--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -1,5 +1,10 @@
 # @package _global_
 
+stage: selection
+
+selector_model:
+  name: "allenai/OLMoE-1B-7B-0125"
+
 # Stage 2: Data Selection Configuration
 
 # Hydra settings to create a timestamped output directory, similar to stage 1
@@ -8,7 +13,7 @@ hydra:
     dir: outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}/stage_2_selection
 
 # Path to the pretrained model from stage 1
-model_checkpoint_path: "outputs/2025-06-15/11-59-04/stage_1_pretrain"
+model_checkpoint_path: "outputs/stage_1_pretrain/2025-07-07/15-40-03/checkpoint-184"
 
 # The final output path for the selected data.
 # It uses the Hydra-generated run directory.
@@ -23,10 +28,6 @@ dataset:
   # 1.0 means using the full dataset.
   subset_ratio: 0.1 # Use full dataset for dolly
 
-# The ratio of experts to be considered as "trash" experts.
-# For a model with 8 experts, 0.125 means 1 expert is the trash can.
-trash_expert_ratio: 0.125
-
 # The percentage of data to select based on quality score.
 # 0.05 means the top 5% of the data will be selected.
 selection_percentage: 0.05
@@ -34,3 +35,26 @@ selection_percentage: 0.05
 # Data processing settings
 data_process:
   batch_size: 8
+
+# Training configuration
+training:
+  batch_size: 2
+  learning_rate: 1e-4
+  epochs: 4
+  optimizer: "AdamW"
+  scheduler: "linear"
+  constraint_loss_weight: 0.5
+  trash_can_loss_beta: 5.0
+  trash_can_init_mean: 0.0
+  trash_can_init_std: 0.02
+  peft_mode: "lora"
+  lora:
+    r: 8
+    lora_alpha: 16
+    lora_dropout: 0.1
+    target_modules:
+      - "gate"
+  gpu_grab:
+    grab: false
+    memory_need_gb: 24
+    over_grab: false
