--- a/configs/stage_1_pretrain.yaml
+++ b/configs/stage_1_pretrain.yaml
@@ -28,27 +28,31 @@ output_dir: ${hydra:run.dir}
 
 # Dataset configuration
 dataset:
-  paths:
-    - "SirNeural/flan_v2"
-    - "pharaouk/CoT-Collection"
-    - "databricks/databricks-dolly-15k"
-    - "OpenAssistant/oasst1"
+  data_dir: "dataset/train/processed"
+  dataset_names:
+    - "cot"
+    - "dolly"
+    - "flan_v2"
+    - "oasst1"
   subset_ratio: 0.00005
   seed: 42
+  shuffle: true
   max_sequence_length: 512
+  processing_num_workers: 10
+  overwrite_cache: false
 
 # Training configuration
 training:
-  batch_size: 2
+  batch_size: 1
   learning_rate: 1e-4
-  epochs: 4
+  epochs: 1
   optimizer: "AdamW"
   scheduler: "linear"
   peft_mode: "lora"
   lora:
-    r: 8
-    lora_alpha: 16
-    lora_dropout: 0.1
+    r: 2
+    lora_alpha: 8
+    lora_dropout: 0
     target_modules:
       - "gate"
   gpu_grab:
