--- a/configs/stage_1_pretrain.yaml
+++ b/configs/stage_1_pretrain.yaml
@@ -34,7 +34,7 @@ dataset:
     - "dolly"
     - "flan_v2"
     - "oasst1"
-  subset_ratio: 0.0005
+  subset_ratio: 0.0001
   seed: 42
   shuffle: true
   max_sequence_length: 512
@@ -48,13 +48,13 @@ training:
   epochs: 4
   optimizer: "AdamW"
   scheduler: "linear"
-  peft_mode: "lora"
+  peft_mode: "full_rank"  # Options: "lora", "full_rank"
   lora:
-    r: 4
+    r: 69
     lora_alpha: 16
     lora_dropout: 0
     target_modules:
-      - "gate"
+      - "mlp.gate"
   gpu_grab:
     grab: false
     memory_need_gb: 24
