--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -4,7 +4,7 @@ stage: selection
 
 # 模型配置
 selector_model:
-  path: "converted_models/select_moe_converted_OLMoE-1B-7B-0125"
+  path: "converted_models/select_moe_converted_OLMoE-1B-7B-0125_test"
   tokenizer_name: "allenai/OLMoE-1B-7B-0125"
 
 # Stage 2: Data Selection Configuration
@@ -15,7 +15,7 @@ hydra:
     dir: outputs/stage_2_selection/${now:%Y-%m-%d}/${now:%H-%M-%S}
 
 # Path to the full rank weights from stage 1
-model_checkpoint_path: "outputs/stage_1_pretrain/2025-07-16/01-57-27/full_rank_weights.pt"
+model_checkpoint_path: "outputs/stage_1_pretrain/2025-08-06/20-54-24-batch=4,lr=0.0001/full_rank_weights.pt"
 
 # The final output path for the selected data.
 # It uses the Hydra-generated run directory.
@@ -31,7 +31,7 @@ dataset:
     - "oasst1"
   seed: 42
   shuffle: false
-  max_sequence_length: 1024
+  max_sequence_length: 512
   # To speed up the selection process, we can score a subset of the combined dataset.
   # 1.0 means using the full dataset.
   subset_ratio: 1 
@@ -40,6 +40,30 @@ dataset:
 # 0.05 means the top 5% of the data will be selected.
 selection_percentage: 0.05
 
+# Two-stage selection strategy:
+# First stage: Select top importance_selection_percentage of data based on quality scores
+# Second stage: From the high-quality data, use diversity selection to pick final selection_percentage
+# Example: importance_selection_percentage=0.1, selection_percentage=0.05
+#   -> First select top 10% quality data, then use FPS to pick 5%/10%=50% diverse samples
+# If importance_selection_percentage <= selection_percentage, skip quality pre-filtering
+importance_selection_percentage: 0.1
+
+# Enable diversity-based selection using Wasserstein distance + FPS
+# If true, uses Wasserstein distance + Farthest Point Sampling for diverse sample selection
+# If false, falls back to quality score ranking (original behavior)
+enable_diversity_selection: true
+
 # Data processing settings
 data_process:
   batch_size: 16
+
+# Distance computation acceleration settings
+distance_computation:
+  # Whether to use GPU acceleration for Wasserstein distance matrix computation
+  # true: GPU acceleration (much faster, requires GPU memory)
+  # false: CPU computation (slower but more memory-efficient)
+  use_gpu_acceleration: true
+  
+  # Batch size for distance matrix computation (only for GPU mode)
+  # Larger values are faster but use more GPU memory
+  distance_batch_size: 1000
