--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "torchvision>=0.21.0",
     "datasets",
     "scipy>=1.16.0",
+    "matplotlib>=3.10.5",
+    "seaborn>=0.13.2",
 ]
 
 [tool.uv.sources]
