现在距离矩阵和FPS都是使用GPU进行计算。

--- a/configs/stage_1_pretrain.yaml
+++ b/configs/stage_1_pretrain.yaml
@@ -65,4 +65,5 @@ training:
   quality_gate_init_std: 0.02
   trash_expert_mode: "zero"  # Options: "zero", "noise", "custom"
   enable_load_balancing: false
+  output_router_logits: true
 
