目前的设置可以让服务器的机器成功运行微调脚本了，使用了梯度累积。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "hydra-core",
     "torch==2.6.0",
-    "transformers",
+    "transformers==4.53.2",
     "peft",
     "accelerate",
     "lm-eval",
