--- a/configs/stage_3_finetune.yaml
+++ b/configs/stage_3_finetune.yaml
@@ -6,10 +6,10 @@ stage: finetune
 # Hydra Configuration
 hydra:
   run:
-    dir: outputs/stage_3_finetune/${now:%Y-%m-%d}/${now:%H-%M-%S}
+    dir: outputs/stage_3_finetune/${now:%Y-%m-%d}/${now:%H-%M-%S}-batch=${training.batch_size},lr=${training.learning_rate},tag=${tag}
   sweep:
     dir: outputs/stage_3_finetune
-    subdir: ${now:%Y-%m-%d}/${now:%H-%M-%S}-${hydra.job.override_dirname}
+    subdir: ${now:%Y-%m-%d}/${now:%H-%M-%S}-batch=${training.batch_size},lr=${training.learning_rate}-${hydra.job.override_dirname}
   job:
     config:
       override_dirname:
@@ -20,6 +20,8 @@ hydra:
           - hydra.sweep.dir
           - hydra.sweep.subdir
 
+tag: "none"
+
 # Model configuration
 model:
   name: "meta-llama/Llama-2-7b-hf"
@@ -28,7 +30,7 @@ output_dir: ${hydra:run.dir}
 
 # Dataset configuration - 使用选择后的数据
 dataset:
-  data_path: "outputs/stage_2_selection/2025-07-17/04-49-54/selected_data.jsonl"
+  data_path: "outputs/stage_2_selection/2025-08-09/13-27-39-lr=1e-3/selected_data.jsonl"
   max_sequence_length: 512
   processing_num_workers: 10
   overwrite_cache: false
@@ -37,6 +39,7 @@ dataset:
 training:
   seed: 42
   batch_size: 128  # 总批次大小，会根据设备数自动分配
+  per_device_batch_size: 8  # 每设备批次大小，可配置
   learning_rate: 2e-5
   epochs: 4
   optimizer: "AdamW"
