--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -9,7 +9,7 @@ selector_model:
 
 # Stage 2: Data Selection Configuration
 
-# Hydra settings to create a timestamped output directory, similar to stage 1
+# Hydra settings to create a timestamped output directory
 hydra:
   run:
     dir: outputs/stage_2_selection/${now:%Y-%m-%d}/${now:%H-%M-%S}-${extract_config:${model_checkpoint_path}}
@@ -29,13 +29,12 @@ hydra:
 # Path to the full rank weights from stage 1
 model_checkpoint_path: "outputs/stage_1_pretrain/2025-08-10/03-42-54-batch=8_lr=0.001_loss=beta_moment_matching_tag=none/full_rank_weights.pt"
 
-# The final output path for the selected data.
-# It uses the Hydra-generated run directory.
+# The final output path for the selected data
 output_path: "${hydra:run.dir}/selected_data.jsonl"
 
 tag: "none"
 
-# Dataset configuration - 使用与stage 1相同的4个数据集
+# Dataset configuration
 dataset:
   data_dir: "dataset/train/processed"
   dataset_names:
@@ -46,44 +45,35 @@ dataset:
   seed: 42
   shuffle: false
   max_sequence_length: 1024
-  # To speed up the selection process, we can score a subset of the combined dataset.
-  # 1.0 means using the full dataset.
+  # 1.0 means using the full dataset
   subset_ratio: 1 
 
-# The percentage of data to select based on quality score.
-# 0.05 means the top 5% of the data will be selected.
+# Data selection percentage (0.05 means select top 5% of the data)
 selection_percentage: 0.05
 
-# Two-stage selection strategy:
-# First stage: Select top importance_selection_percentage of data based on quality scores
-# Second stage: From the high-quality data, use diversity selection to pick final selection_percentage
-# Example: importance_selection_percentage=0.1, selection_percentage=0.05
-#   -> First select top 10% quality data, then use FPS to pick 5%/10%=50% diverse samples
-# If importance_selection_percentage <= selection_percentage, skip quality pre-filtering
-importance_selection_percentage: 0.1
+# Clustering method: "kmeans" or "hdbscan"
+clustering_method: "kmeans"
 
-# Enable diversity-based selection using cosine similarity + FPS
-# If true, uses layer-wise cosine similarity + Farthest Point Sampling for diverse sample selection
-# If false, falls back to quality score ranking (original behavior)
-enable_diversity_selection: true
+# Clustering parameters
+clustering_params:
+  # K-Means specific parameters
+  auto_k: true  # Automatically determine k using Elbow method
+  k: null  # Manual k value (only used if auto_k=false)
+  k_range: [10, 100]  # k search range for Elbow method
+  max_iters: 300  # Maximum iterations
+  
+  # HDBSCAN specific parameters
+  min_cluster_size: null  # Minimum cluster size (auto-estimated if null)
+  min_samples: null  # Minimum samples (auto-set if null)
+  metric: "cosine"  # Distance metric
+  use_gpu: true  # Use GPU acceleration if available
+  auto_tune: false  # Auto-tune HDBSCAN parameters
 
 # Skip data selection process after obtaining router logits
-# If true, only performs model inference to collect router logits and saves them to router_data/
-# Data selection can then be performed separately using different algorithms/scripts
-# If false, performs data selection after inference (default behavior)
-skip_data_selection: true
+# If true, only performs model inference to collect router logits
+# Data selection can then be performed separately using scripts/cluster_selection.py
+skip_data_selection: false
 
 # Data processing settings
 data_process:
   batch_size: 32
-
-# Distance computation acceleration settings
-distance_computation:
-  # Batch size for distance matrix computation
-  # Larger values are faster but use more GPU memory
-  distance_batch_size: 1000
-  # FPS algorithm settings
-  # Log interval for FPS progress (log every N steps)
-  fps_log_interval: 100
-  # Enable memory-efficient FPS mode
-  fps_memory_efficient: true
