--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ dependencies = [
     "scipy>=1.16.0",
     "matplotlib>=3.10.5",
     "seaborn>=0.13.2",
+    # GPU clustering libraries
+    "scikit-learn>=1.3.0",
+    "numpy>=1.24.0",
+    # Optional RAPIDS cuML for GPU HDBSCAN (install separately if needed)
+    # cuml is available from conda-forge: conda install -c rapidsai -c conda-forge cuml
 ]
 
 [tool.uv.sources]
