--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,9 @@ dependencies = [
     "scipy>=1.16.0",
     "matplotlib>=3.10.5",
     "seaborn>=0.13.2",
-    # GPU clustering libraries
     "scikit-learn>=1.3.0",
     "numpy>=1.24.0",
-    # Optional RAPIDS cuML for GPU HDBSCAN (install separately if needed)
-    # cuml is available from conda-forge: conda install -c rapidsai -c conda-forge cuml
+    "cuml-cu12>=25.8.0",
 ]
 
 [tool.uv.sources]
@@ -51,6 +49,8 @@ select = [
     "B",  # flake8-bugbear (发现潜在bug)
     "A",  # flake8-builtins (防止覆盖内置函数)
 ]
+
+ignore = ["E402"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["select-moe"]
