--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "numpy>=1.24.0",
     "cuml-cu12>=25.8.0",
+    "umap>=0.1.1",
 ]
 
 [tool.uv.sources]
