--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -51,8 +51,8 @@ dataset:
 # Data selection percentage (0.05 means select top 5% of the data)
 selection_percentage: 0.05
 
-# Clustering method: "kmeans" or "hdbscan"
-clustering_method: "hdbscan"
+# Clustering method: currently only "kmeans" is supported
+clustering_method: "kmeans"
 
 # Clustering parameters
 clustering_params:
@@ -66,13 +66,6 @@ clustering_params:
   enable_parallel_kmeans: false  # Enable multi-GPU parallel computation for k-value search
   parallel_processes: 4  # Number of parallel processes for k-value computation
   gpu_allocation_strategy: "round_robin"  # GPU allocation strategy: "round_robin" or "balanced"
-  
-  # HDBSCAN specific parameters
-  min_cluster_size: null  # Minimum cluster size (auto-estimated if null)
-  min_samples: null  # Minimum samples (auto-set if null)
-  metric: "cosine"  # Distance metric
-  use_gpu: true  # Use GPU acceleration if available
-  auto_tune: false  # Auto-tune HDBSCAN parameters
 
 # Skip data selection process after obtaining router logits
 # If true, only performs model inference to collect router logits
