--- a/configs/training/llama_2_7b.yaml
+++ b/configs/training/llama_2_7b.yaml
@@ -7,8 +7,9 @@ per_device_batch_size: 8  # 每设备批次大小，可配置
 learning_rate: 2e-5
 epochs: 4
 optimizer: "AdamW"
-scheduler: "cosine"  # 余弦衰减
+scheduler: "linear"  # 余弦衰减
 warmup_ratio: 0.03    # 线性预热比例
+weight_decay: 0.0     # 权重衰减
 peft_mode: "lora"    # 使用LoRA微调
 lora:
   r: 128
